[package]
name = "const_env--value"
version = "0.1.2"
authors = ["Drake Tetreault <ekardnt@ekardnt.com>", "Dylan McKay <me@dylanmckay.io>"]
edition = "2018"
description = "Configure const and static items by environment variables."
readme = "README.md"
license = "CC0-1.0"

[lib]
proc_macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.const_env_impl--value]
version = "=0.1.2"
path = "../const_env_impl"

[dev-dependencies]
compiletest_rs = { version = "0.5", features = ["stable"] }
