[package]
name = "const_env_impl--value"
version = "0.1.2"
authors = ["Drake Tetreault <ekardnt@ekardnt.com>", "Dylan McKay <me@dylanmckay.io>"]
edition = "2018"
description = "Configure const and static items by environment variables."
readme = "README.md"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
